src/test/ui/parser/issue-41155.stderr
error: expected one of `(`, `async`, `const`, `default`, `extern`, `fn`, `type`, `unsafe`, or identifier, found `}`
  --> $DIR/issue-41155.rs:5:1
   |
LL |     pub
   |        - expected one of 9 possible tokens
LL | }
   | ^ unexpected token

error: aborting due to previous error

